# tgwebview

./: .gitignore  README.md  pyproject.toml
examples/: index.html  test.py
webview_runner/: __init__.py  __main__.py  app.py  bridge.py  constants.py  defaults.py  inject.js  injectors.py  qr_camera.js
webview_runner/adapters/: __init__.py  _pyrogram.py  _telethon.py
