[project]
name = "tgwebview"
version = "0.1.0"
description = "Native desktop WebView for Telegram Mini Apps with full SDK bridge and real MTProto backend"
requires-python = ">=3.11"
license = "MIT"
keywords = ["telegram", "mini-app", "webview", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "pywebview>=5.0",
]

[project.optional-dependencies]
telethon = ["telethon>=1.34"]
pyrogram = ["pyrogram>=2.0"]
kurigram = ["kurigram>=2.0"]

[project.scripts]
tgwebview = "webview_runner.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
webview_runner = ["inject.js", "qr_camera.js"]
